01-traefik/404-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-pages
  template:
    metadata:
      labels:
        app: error-pages
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: error-pages-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-error-config
      - name: error-pages-html
        configMap:
          name: error-pages-html
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages
spec:
  selector:
    app: error-pages
  ports:
  - port: 80
    targetPort: 80
