01-traefik/404-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catchall-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: error-pages
            port:
              number: 80
